added social icons and footer to HTML file, and basic styling in CSS file

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,11 @@ body {
     background-color: #fffff5;
 }
 
+/* footer */
+footer {
+    text-align: center;
+}
+
 /* Navbar and Navigation properties */
 .navbar-nav {
     margin-left: auto;
