--- a/css/style.css
+++ b/css/style.css
@@ -13,9 +13,18 @@ footer {
     margin-left: auto;
     margin-right: 0 !important;
 }
+.navbar-brand img {
+    height: 40px;
+    width: 40px;
+}
 
 /* sets how nav collapse appears */
 .nav-item {
     margin-left: auto;
     /* margin-right: 0 !important; */
+}
+
+/* Header section myHeroHeader */
+.myHeroHeader {
+    
 }
