added images to image folder, set card images to same height in CSS file.

--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,12 @@ footer {
 .myImage {
 
 }
+
+/* Work section */
+
+/* sets card img all to the same size */
+.card-img-top {
+    width: 100%;
+    height: 18vw;
+    object-fit: cover;
+}
