--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,10 @@ footer {
     border: 1px solid rgba(159, 159, 159, 0.245);
     transition: 0.4s ease-in;
 }
+/* sets background-color of card body */
+.card-body {
+    background-color: #f7f7ea;
+}
 /* animates card on hover incluing shadow */
 .card:hover {
     transform: translateY(-20px);
