added button color to cards in CSS file, and href's to buttons in HTML file

--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ footer {
     margin-left: auto;
     /* margin-right: 0 !important; */
 }
+/* sets nav-item hover color and underlinings */
 .nav-item a:hover {
     color: rgb(200, 19, 236) !important;
     border-bottom: 2px dashed rgba(6, 223, 252, 0.962);
@@ -86,6 +87,16 @@ footer {
     width: 100%;
     height: 18vw;
     object-fit: cover;
+}
+/* sets card button color */
+#button-color {
+    background: linear-gradient(to bottom, rgb(137, 73, 170) 20%, rgb(111, 109, 251) 100%);
+    color: white;
+}
+/* sets card button color on hover */
+#button-color:hover {
+    background: linear-gradient(to bottom, rgb(152, 117, 169) 20%, rgb(154, 152, 250) 100%);
+    color: white;
 }
 
 /* Skills section */
