--- a/css/style.css
+++ b/css/style.css
@@ -55,9 +55,7 @@ footer {
     align-items: center;
     text-align: center;
 }
-/* .myImage {
 
-} */
 
 /* Work section */
 .work-section-bg {
@@ -66,6 +64,7 @@ footer {
 .work-heading {
     padding-bottom: 20px;
 }
+/* card properties */
 .card {
     cursor: pointer;
     border: 1px solid rgba(159, 159, 159, 0.245);
@@ -81,14 +80,12 @@ footer {
     transition: 0.4s ease-out;
     box-shadow: 4px 16px 4px rgba(28, 10, 10, 0.276) !important;
 }
-
 /* sets card img all to the same size */
 .card-img-top {
     width: 100%;
     height: 18vw;
     object-fit: cover;
 }
-
 /* sets card button color */
 #button-color {
     background: linear-gradient(to bottom, rgb(137, 73, 170) 20%, rgb(111, 109, 251) 100%);
