--- a/css/style.css
+++ b/css/style.css
@@ -119,6 +119,22 @@ footer {
     margin-top: 100px;
     margin-bottom: 100px;
 }
+.social {
+    padding-bottom: 100px;
+}
+/* Contact me button */
+.contact-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-bottom: 80px;
+}
+/* contact me button on heover */
+.contact-me-button:hover {
+    transform: translateY(-10px);
+    transition: 0.4s ease-out;
+    box-shadow: 4px 12px 4px rgba(28, 10, 10, 0.276) !important;
+}
 /* sets social icons colors */
 .fa-linkedin {
     color: rgb(0, 191, 255);
