Added jquery icon.

--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,9 @@ footer {
 .fa-square-js {
     color: rgb(225, 222, 49);
 }
+.fa-bootstrap {
+    color: rgb(143, 28, 237);
+}
 .fa-git-alt {
     color: rgb(237, 67, 28);
 }
